import React from "react";
import ReactDOM from "react-dom";
import App, { Search, Button, Table } from "./App";
import renderer from "react-test-renderer";

import Enzyme, { shallow } from "enzyme";
import Adapter from "enzyme-adapter-react-16";

Enzyme.configure({ adapter: new Adapter() });

describe("App", () => {
  it("renders without crashing", () => {
    const div = document.createElement("div");
    ReactDOM.render(<App />, div);
    ReactDOM.unmountComponentAtNode(div);
  });
  test("has a valid snapshot ", () => {
    const component = renderer.create(<App />);
    const tree = component.toJSON();
    expect(tree).toMatchSnapshot();
  });
});

describe("Search", () => {
  it("renders without crashing"),
    () => {
      const div = document.createElement("div");
      ReactDOM.render(<Search>Search</Search>, div);
      ReactDOM.unmountComponentAtNode(div);
    };

  test("has valid snapshot", () => {
    const component = renderer.create(<Search>Search</Search>);
    const tree = component.toJSON;
    expect(tree).toMatchSnapshot();
  });
});

describe("Button", () => {
  it("renders without crashing", () => {
    const div = document.createElement("div");
    ReactDOM.render(<Button>Give Me More</Button>, div);
    ReactDOM.unmountComponentAtNode(div);
  });
  test("has a valid snapshot", () => {
    const component = renderer.create(<Button>Give Me More</Button>);
    const tree = component.toJSON();
    expect(tree).toMatchSnapshot();
  });
});

describe("Table", () => {
  const props = {
    list: [
      { title: "1", author: "1", num_comments: 1, points: 2, objectID: "y" },
      { title: "2", author: "2", num_comments: 1, points: 2, objectID: "z" }
    ],
    sortKey: "TITLE",
    isSortReverse: false
  };

  it("renders without crashing table", () => {
    const div = document.createElement("div");
    ReactDOM.render(<Table {...props} />, div);
  });
  test("has a valid snapshot", () => {
    const component = renderer.create(<Table {...props} />);
    const tree = component.toJSON();
    expect(tree).toMatchSnapshot();
  });
});

describe("Table Enzyme", () => {
  const props = {
    list: [
      { title: "1", author: "1", num_comments: 1, points: 2, objectID: "y" },
      { title: "2", author: "2", num_comments: 1, points: 2, objectID: "z" }
    ]
  };

  it("Shows items in the list", () => {
    const element = shallow(<Table {...props} />);
    expect(element.find(".table-row").length).toBe(2);
  });
});

// describe("Button Enzyme", () => {
//   const props = {
//     list: [
//       { title: "1", author: "1", num_comments: 1, points: 2, objectID: "y" },
//       { title: "2", author: "2", num_comments: 1, points: 2, objectID: "z" }
//     ],
//     sortKey: "TITLE",
//     isSortReverse: false
//   };

//   it("Shows button configs ", () => {
//     const element = shallow(<Button {...props}>More</Button>);
//     expect(element.find());
//   });
// });
